fix(recipe-search): add z index to filters form so recipe cards don't overlap it

--- a/source/components/recipe-search/recipe-search.css
+++ b/source/components/recipe-search/recipe-search.css
@@ -45,6 +45,7 @@ main {
   transform: translate(-50%, -50%);
   display: none;
   padding: 30px 80px;
+  z-index: 999;
 }
 
 #close-button {
